Update: 增加编辑器代码片段

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,11 @@ lerna-debug.log*
 
 node_modules
 dist
+dist.rar
 dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
